--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   vesta:
-    image: niiknow/vestacp
+    image: modos189/vestacp-base
     container_name: vesta
     cap_add: ['NET_RAW', 'NET_ADMIN']
     hostname: yourcpanelhostname.com
